<resources>
    <string name="app_name">ChurrascoreTruco</string>
    <string name="com_camisa">Com Camisa</string>
    <string name="sem_camisa">Sem Camisa</string>
    <string name="_7">7</string>
    <string name="x">x</string>
    <string name="_2">2</string>
    <string name="vitorias_0">Vitorias: 0</string>
    <string name="time_1">Time 1</string>
    <string name="time_2">Time 2</string>
    <string name="adcionar_pontos">Adcionar Pontos:</string>
    <string name="_1">+1</string>
    <string name="__1">-1</string>
    <string name="_3">+3</string>
    <string name="_6">+6</string>
    <string name="_9">+9</string>
    <string name="_12">+12</string>
    <string name="adicionar_pontos">Adicionar Pontos</string>
    <string name="_15_min">15 min.</string>
    <string name="_5">5</string>
    <string name="churrascore">Churrascore</string>
    <string name="truco">Truco</string>
    <string name="pebolim">Pebolim</string>
    <string name="futebol">Futebol</string>
</resources>
