<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <requestFocus/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <EditText
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="20dp"
            android:layout_weight="2"
            android:hint="@string/time_1"
            android:imeOptions="actionNext"
            android:inputType="textPersonName|textCapWords" />

        <EditText
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="16dp"
            android:layout_weight="2"
            android:imeOptions="actionNext"
            android:inputType="textPersonName|textCapWords"
            android:layout_marginEnd="16dp"
            android:hint="@string/time_2"
            android:layout_marginStart="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="30dp"
            android:text="@string/_7"
            android:textAlignment="center"
            android:textSize="150sp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="16dp"
            android:textColor="#00ab90"/>

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/x"
            android:textAlignment="center"
            android:textSize="75sp"
            android:textColor="#00ab90"/>

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="16dp"
            android:text="@string/_2"
            android:textAlignment="center"
            android:textSize="150sp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="30dp"
            android:textColor="#00AB90"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="16dp"
            android:text="@string/vitorias_0"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginStart="16dp" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginRight="16dp"
            android:text="@string/vitorias_0"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginEnd="16dp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="14sp"
        android:text="@string/adcionar_pontos"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <Button
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="2"
            android:text="@string/_1"
            android:textSize="20sp"
            android:textAlignment="center"
            android:background="#00AB90"
            android:textColor="#FFFFFF"/>

        <Button
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="2"
            android:text="@string/__1"
            android:textSize="20sp"
            android:textAlignment="center"
            android:background="#00AB90"
            android:textColor="#FFFFFF"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <Button
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="2"
            android:text="@string/_3"
            android:textSize="20sp"
            android:textAlignment="center"
            android:background="#00AB90"
            android:textColor="#FFFFFF"/>

        <Button
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="2"
            android:text="@string/_6"
            android:textSize="20sp"
            android:textAlignment="center"
            android:background="#00AB90"
            android:textColor="#FFFFFF"/>

        <Button
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="2"
            android:text="@string/_9"
            android:textSize="20sp"
            android:textAlignment="center"
            android:background="#00AB90"
            android:textColor="#FFFFFF"/>

        <Button
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="2"
            android:text="@string/_12"
            android:textSize="20sp"
            android:textAlignment="center"
            android:background="#00AB90"
            android:textColor="#FFFFFF"/>
    </LinearLayout>

</LinearLayout>