<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Futebol"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <requestFocus/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <EditText
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="20dp"
            android:layout_weight="2"
            android:imeOptions="actionNext"
            android:hint="@string/com_camisa"
            android:inputType="textPersonName|textCapWords"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="20dp" />

        <EditText
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="16dp"
            android:layout_weight="2"
            android:imeOptions="actionNext"
            android:inputType="textPersonName|textCapWords"
            android:layout_marginEnd="16dp"
            android:hint="@string/sem_camisa"
            android:layout_marginStart="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="30dp"
            android:text="@string/_2"
            android:textAlignment="center"
            android:textSize="150sp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="16dp"
            android:textColor="@color/greentea"/>

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/x"
            android:textAlignment="center"
            android:textSize="75sp"
            android:textColor="@color/greentea"/>

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="16dp"
            android:text="@string/_5"
            android:textAlignment="center"
            android:textSize="150sp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="30dp"
            android:textColor="@color/greentea"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="16dp"
            android:text="@string/vitorias_0"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginStart="16dp" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginRight="16dp"
            android:text="@string/vitorias_0"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginEnd="16dp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="14sp"
        android:text="@string/adcionar_pontos"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <Button
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="2"
            android:text="@string/_1"
            android:textSize="20sp"
            android:textAlignment="center"
            android:background="@color/greentea"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="2"
            android:text="@string/__1"
            android:textSize="20sp"
            android:textAlignment="center"
            android:background="@color/greentea"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp">
        <TextView
            android:id="@+id/tempoRestante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="2"
            android:text="Tempo restante."
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp">
        <ImageButton
            android:id="@+id/play"
            android:src="@drawable/ic_play_arrow"
            android:background="@color/white"
            android:layout_width="22dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <SeekBar
            android:id="@+id/seekTimer"
            android:max="1800"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="10dp" />

        <ImageButton
            android:id="@+id/pause"
            android:src="@drawable/ic_pause"
            android:background="@color/white"
            android:layout_width="22dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            />

    </LinearLayout>

</LinearLayout>