<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="net.catito.churrascore.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_weight="2"
            android:text="@string/churrascore"
            android:textAlignment="center"
            android:textColor="@color/greentea"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:paddingBottom="16dp">

        <Button
            android:id="@+id/btnFutebol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="2"
            android:background="@color/white"
            android:text="@string/futebol"
            android:textAlignment="center"
            android:textColor="@color/greentea"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnPebolim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="2"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:text="@string/pebolim"
            android:textAlignment="center"
            android:textColor="@color/greentea"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnTruco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="2"
            android:background="@color/white"
            android:text="@string/truco"
            android:textAlignment="center"
            android:textColor="@color/greentea"
            android:textSize="25sp" />
    </LinearLayout>
</LinearLayout>
